--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
   <!-- Custom CSS -->
   <link href="css/portfolio.min.css" rel="stylesheet">
 
+  <!-- Favicon-->
+  <link rel="icon" type="image/png" href="./img/favicon.png">
+
 </head>
 
 <body id="page-top">
