Increase size of card icons

--- a/index.html
+++ b/index.html
@@ -137,126 +137,126 @@
     <div class="row">
       <div class="col-lg-3">
         <div class="card">
-          <img class="card-img-top" src="./img/fcc-pinterest.png" alt="Pinterest Clone">
+          <img class="card-img-top" src="./img/card/fcc-pinterest.png" alt="Pinterest Clone">
           <div class="card-body portfolio-item-content">
             <h4 class="card-title">Pinterest Clone</h4>
             <a href="https://dixita0607-fcc-pinterestclone.herokuapp.com" target="_blank" class="card-link"><i
-                class="fa fa-external-link-square" aria-hidden="true"></i>
+                class="fa card-link-icons fa-external-link-square" aria-hidden="true"></i>
             </a>
             <a href="https://github.com/dixita0607/fcc-pinterestclone-app" target="_blank" class="card-link"> <i
-                class="fa fa-github-alt"></i>
+                class="fa card-link-icons fa-github-alt"></i>
             </a>
           </div>
         </div>
       </div>
       <div class="col-lg-3">
         <div class="card">
-          <img class="card-img-top" src="./img/booktrading.png" alt="Book Trading">
+          <img class="card-img-top" src="./img/card/booktrading.png" alt="Book Trading">
           <div class="card-body portfolio-item-content">
             <h4 class="card-title">Book Trading</h4>
             <a href="http://dixita0607-fcc-booktrading-app.herokuapp.com" target="_blank" class="card-link"><i
-                class="fa fa-external-link-square" aria-hidden="true"></i>
+                class="fa card-link-icons fa-external-link-square" aria-hidden="true"></i>
             </a>
             <a href="https://github.com/dixita0607/fcc-booktrading-app" target="_blank" class="card-link"> <i
-                class="fa fa-github-alt"></i>
+                class="fa card-link-icons fa-github-alt"></i>
             </a>
           </div>
         </div>
       </div>
       <div class="col-lg-3">
         <div class="card">
-          <img class="card-img-top" src="./img/stock-chart.png" alt="Stock Chart">
+          <img class="card-img-top" src="./img/card/stock-chart.png" alt="Stock Chart">
           <div class="card-body portfolio-item-content">
             <h4 class="card-title">Stock Chart</h4>
             <a href="http://dixita0607-fcc-stockchart-app.herokuapp.com" target="_blank" class="card-link"><i
-                class="fa fa-external-link-square" aria-hidden="true"></i>
+                class="fa card-link-icons fa-external-link-square" aria-hidden="true"></i>
             </a>
             <a href="https://github.com/dixita0607/fcc-stockchart-app" target="_blank" class="card-link"> <i
-                class="fa fa-github-alt"></i>
+                class="fa card-link-icons fa-github-alt"></i>
             </a>
           </div>
         </div>
       </div>
       <div class="col-lg-3">
         <div class="card">
-          <img class="card-img-top" src="./img/nightlife.png" alt="Night Life">
+          <img class="card-img-top" src="./img/card/nightlife.png" alt="Night Life">
           <div class="card-body portfolio-item-content">
             <h4 class="card-title">Night Life</h4>
             <a href="http://dixita0607-fcc-nightlife-app.herokuapp.com" target="_blank" class="card-link"><i
-                class="fa fa-external-link-square" aria-hidden="true"></i>
+                class="fa card-link-icons fa-external-link-square" aria-hidden="true"></i>
             </a>
             <a href="https://github.com/dixita0607/fcc-nightlife-app" target="_blank" class="card-link"> <i
-                class="fa fa-github-alt"></i>
+                class="fa card-link-icons fa-github-alt"></i>
             </a>
           </div>
         </div>
       </div>
       <div class="col-lg-3">
         <div class="card">
-          <img class="card-img-top" src="./img/voting-app.png" alt="Voting App">
+          <img class="card-img-top" src="./img/card/voting-app.png" alt="Voting App">
           <div class="card-body portfolio-item-content">
             <h4 class="card-title">Voting App</h4>
             <a href="http://dixita0607-fcc-voting-app.herokuapp.com" target="_blank" class="card-link"><i
-                class="fa fa-external-link-square" aria-hidden="true"></i>
+                class="fa card-link-icons fa-external-link-square" aria-hidden="true"></i>
             </a>
             <a href="https://github.com/dixita0607/fcc-voting-app" target="_blank" class="card-link"> <i
-                class="fa fa-github-alt"></i>
+                class="fa card-link-icons fa-github-alt"></i>
             </a>
           </div>
         </div>
       </div>
       <div class="col-lg-3">
         <div class="card">
-          <img class="card-img-top" src="./img/roguelike.png" alt="Rogue like dungeon">
+          <img class="card-img-top" src="./img/card/roguelike.png" alt="Rogue like dungeon">
           <div class="card-body portfolio-item-content">
             <h4 class="card-title">RogueLike Dungeon</h4>
             <a href="https://codepen.io/dixita0607/full/KvwVqe/" target="_blank" class="card-link"><i
-                class="fa fa-external-link-square" aria-hidden="true"></i>
+                class="fa card-link-icons fa-external-link-square" aria-hidden="true"></i>
             </a>
             <a href="https://codepen.io/dixita0607/pen/KvwVqe" target="_blank" class="card-link"> <i
-                class="fa fa-codepen" aria-hidden="true"></i>
+                class="fa card-link-icons fa-codepen" aria-hidden="true"></i>
             </a>
           </div>
         </div>
       </div>
       <div class="col-lg-3">
         <div class="card">
-          <img class="card-img-top" src="./img/game-of-life.png" alt="Game Of Life">
+          <img class="card-img-top" src="./img/card/game-of-life.png" alt="Game Of Life">
           <div class="card-body portfolio-item-content">
             <h4 class="card-title">Game Of Life</h4>
             <a href="https://codepen.io/dixita0607/full/przZEW/" target="_blank" class="card-link"><i
-                class="fa fa-external-link-square" aria-hidden="true"></i>
+                class="fa card-link-icons fa-external-link-square" aria-hidden="true"></i>
             </a>
             <a href="https://codepen.io/dixita0607/pen/przZEW/" target="_blank" class="card-link"> <i
-                class="fa fa-codepen" aria-hidden="true"></i>
+                class="fa card-link-icons fa-codepen" aria-hidden="true"></i>
             </a>
           </div>
         </div>
       </div>
       <div class="col-lg-3">
         <div class="card">
-          <img class="card-img-top" src="./img/udaan-17.png" alt="Udaan 17">
+          <img class="card-img-top" src="./img/card/udaan-17.png" alt="Udaan 17">
           <div class="card-body portfolio-item-content">
             <h4 class="card-title">Udaan 17</h4>
             <a href="https://bvmites.github.io/udaan17-website" target="_blank" class="card-link"><i
-                class="fa fa-external-link-square" aria-hidden="true"></i>
+                class="fa card-link-icons fa-external-link-square" aria-hidden="true"></i>
             </a>
             <a href="https://github.com/bvmites/udaan17-website" target="_blank" class="card-link"> <i
-                class="fa fa-github-alt" aria-hidden="true"></i>
+                class="fa card-link-icons fa-github-alt" aria-hidden="true"></i>
             </a>
           </div>
         </div>
       </div>
       <div class="col-lg-3">
         <div class="card">
-          <img class="card-img-top" src="./img/udaan-16.png" alt="Udaan 16">
+          <img class="card-img-top" src="./img/card/udaan-16.png" alt="Udaan 16">
           <div class="card-body portfolio-item-content">
             <h4 class="card-title">Udaan 16</h4>
             <a href="https://bvmites.github.io/udaan16-website" target="_blank" class="card-link"><i
-                class="fa fa-external-link-square" aria-hidden="true"></i>
+                class="fa card-link-icons fa-external-link-square" aria-hidden="true"></i>
             </a>
             <a href="https://github.com/bvmites/udaan16-website" target="_blank" class="card-link"> <i
-                class="fa fa-github-alt" aria-hidden="true"></i>
+                class="fa card-link-icons fa-github-alt" aria-hidden="true"></i>
             </a>
           </div>
         </div>
